# osram

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: io_config.hxx.CD2F68487542599A.idx  main.cxx.A1743D2083E9C614.idx  turn_bearing.hxx.B0D77E4830043F9D.idx
cmake/: Findgdal.cmake  Findgeos.cmake  Findproj.cmake  Findsparsehash.cmake  GoogleTest-CMakeLists.txt.in
include/osram/: iterator_facade.hxx  osram.hxx  osram_fwd.hxx
include/osram/engine/: algorithm.hxx  approach.hxx  base64.hxx  bearing.hxx  data_watchdog.hxx  datafacade.hxx  datafacade_factory.hxx  datafacade_provider.hxx  engine.hxx  engine_config.hxx  geospatial_query.hxx  hint.hxx  internal_route_result.hxx  phantom_node.hxx  routing_algorithm.hxx  search_engine_data.hxx  status.hxx
include/osram/engine/api/: base_parameters.hxx  base_result.hxx  route_parameters.hxx  route_paramteres.hxx  table_parameters.hxx
include/osram/engine/datafacade/: algorithm_datafacade.hxx  contiguous_block_allocator.hxx  contiguous_internalmem_datafacade.hxx  datafacade_base.hxx  mmap_memory_allocator.hxx  process_memory_allocator.hxx
include/osram/engine/plugins/: plugin_base.hxx  table.hxx
include/osram/extractor/: class_data.hxx  compressed_edge_container.hxx  conditional_turn_penalty.hxx  config.hxx  edge_based_edge.hxx  edge_based_node.hxx  edge_based_node_segment.hxx  extraction_turn.hxx  extractor.hxx  files.hxx  internal_extractor_edge.hxx  maneuver_override.hxx  name_table.hxx  nbg_to_ebg.hxx  node_based_edge.hxx  node_data_container.hxx  profile_properties.hxx  query_node.hxx  restriction.hxx  restriction_index.hxx  road_classification.hxx  segment_data_container.hxx  serialization.hxx  travel_mode.hxx  turn_lane_types.hxx  way.hxx  way_restriction_map.hxx
include/osram/extractor/intersection/: constants.hxx  edge.hxx
include/osram/guidance/: roundabout_type.hxx  turn_bearing.hxx  turn_data_container.hxx  turn_instruction.hxx
include/osram/partitioner/: edge_based_graph_reader.hxx
include/osram/storage/: block.hxx  io.hxx  io_config.hxx  itar.hxx  serialization.hxx  shared_data_index.hxx  shared_datatype.hxx  shared_memory_ownership.hxx  shared_monitor.hxx  storage_config.hxx  tar.hxx  tar_fwd.hxx  view_factory.hxx
include/osram/updater/: updater.hxx  updater_config.hxx
include/osram/util/: alias.hxx  arrow_proxy.hxx  attrib.hxx  bearing.hxx  bit_range.hxx  concurrent_id_map.hxx  coordinate.hxx  coordinate_calculation.hxx  fingerprint.hxx  fwd.hxx  hash_combine.hxx  hilbert_value.hxx  indexed_data.hxx  integer_range.hxx  iterator_facade.hxx  mmap_file.hxx  msb.hxx  numeric_cast.hxx  permutation.hxx  rectangle.hxx  ref.hxx  static_rtree.hxx  typedefs.hxx  vector_view.hxx  version.hxx  web_mercator.hxx  working_hours.hxx
include/osram/util/guidance/: entry_class.hxx  turn_lanes.hxx
patches/: 0001-Move-protozero-to-vendored-library.patch
src/: CMakeLists.txt  main.cxx  osram.cxx
src/engine/: CMakeLists.txt  engine_config.cxx  hint.cxx  search_engine_data.cxx
src/extractor/: CMakeLists.txt  compressed_edge_container.cxx  extraction_way.cxx  extractor.cxx  internal_extractor_edge.cxx  maneuver_override.cxx  node_based_edge.cxx  profile_properties.cxx  restriction.cxx  way_restriction_map.cxx
src/extractor/intersection/: edge.cxx  intersection_edge.cxx
src/storage/: CMakeLists.txt  io_config.cxx  tar.cxx
src/updater/: CMakeLists.txt  updater.cxx
src/util/: CMakeLists.txt  coordinate.cxx  coordinate_calculation.cxx  rectangle.cxx  working_hours.cxx
src/util/guidance/: entry_class.cxx  turn_lanes.cxx
tests/: CMakeLists.txt
tests/src/: test_route.cxx
